@@ -3827,7 +3827,7 @@ package body Sem_Attr is
             end if;
 
          --  Body case, where we must be inside a generated _Postcondition
-         --  procedure, and the prefix must be on the scope stack,  or else
+         --  procedure, and the prefix must be on the scope stack, or else
          --  the attribute use is definitely misplaced. The condition itself
          --  may have generated transient scopes, and is not necessarily the
          --  current one.
