@@ -1,5 +1,15 @@
 2009-04-10  Robert Dewar  <dewar@adacore.com>
 
+	* sem_ch6.adb: Minor code clean up.
+
+	* einfo.ads, sem_attr.adb: Minor comment fixes.
+
+2009-04-10  Robert Dewar  <dewar@adacore.com>
+
+	* sem_ch8.adb: Minor reformatting
+
+2009-04-10  Robert Dewar  <dewar@adacore.com>
+
 	* einfo.ads, einfo.adb (Postcondition_Proc): New attribute for
 	procedures.
 
